fix overlap on topic discussion

--- a/common/common.scss
+++ b/common/common.scss
@@ -4855,6 +4855,10 @@ body {
   flex-grow: 1;
 }
 
+#main-outlet {
+  padding-bottom: 70px;
+}
+
 /* END FOOTER STYLES */
 
 
